--- a/input.html
+++ b/input.html
@@ -18,8 +18,18 @@
 <img >
 <img >
 <img ><img >
-<img na="s">
 <img >
 <img >
 <img >
 <img ><img >
+<a href="http://www.google.cl"></a>
+<a href="facebook.com">algo</a>
+<a href="twitter.com">also</a>
+<a href="youtube.com"></a>
+<a href="4"></a>
+<a href="5"></a>
+<a href="6">
+<script></script>
+<script as="asd"> </script>
+<script>asdasd </script>
+<script> </script>
